[project]
name = "scaler-meta-hackathon"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
    "psutil",
    "requests",
    "google-generativeai"
]

[project.scripts]
openenv-start = "my_env.app:app"

[tool.setuptools]
packages = ["my_env"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
